# tauri-plugin-stt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
examples/stt-example/: index.html  package.json
examples/stt-example/src/: App.css  App.tsx
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
