[package]
name = "tauri-plugin-stt"
version = "0.2.0"
authors = ["Affex Team"]
description = "Speech-to-text recognition plugin for Tauri with multi-language support"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/brenogonzaga/tauri-plugin-stt"
homepage = "https://github.com/brenogonzaga/tauri-plugin-stt"
documentation = "https://docs.rs/tauri-plugin-stt"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-stt"
keywords = ["tauri", "speech", "recognition", "stt", "whisper"]
categories = ["multimedia::audio", "api-bindings"]

[features]
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
tauri = { version = "2.10.3" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
cpal = "0.17"
hound = "3"
base64 = "0.22"
whisper-rs = { version = "0.16", default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
